--- a/mp03/codelab1/index.html
+++ b/mp03/codelab1/index.html
@@ -64,32 +64,32 @@
       </google-codelab-step>
     
       <google-codelab-step label="Hello World!" duration="0">
-        <p>Vamos a realizar ahora una pequeña aproximación al proceso de desarrollo que hemos visto anteriormente.</p>
-<p>En resumen, el proceso de desarrollo es el siguiente: </p>
+        <p>Anema a realitzar una petita aproximació al procés de desenvolupament que hem vist anteriorment.</p>
+<p>En resum, el procés de desenvolupament és el següent: </p>
 <ol type="1" start="1">
-<li>Escribimos el código fuente en un archivo de texto</li>
-<li>Compilamos el código fuente mediante el compilador <code>javac</code>, que lo traduce a bytecode.</li>
-<li>Ejecutamos el programa compilado con la Java Virtual Machine <code>java</code></li>
+<li>Escrivim el codi font en un archiu de text</li>
+<li>Compilem el codi font mitjançant el compilador <code>javac</code>, que el tradueix a bytecode.</li>
+<li>Executem el programa compilat amb la Java Virtual Machine <code>java</code></li>
 </ol>
 <p class="image-container"><img style="width: 618.30px" src="img\9cafc0189cc97020.png"></p>
-<h2 is-upgraded>Escribe el código fuente del programa &#34;Hola Mundo&#34;</h2>
-<p>Abre un editor de texto sin formato, como gedit, y crea un archivo en tu carpeta personal, con el nombre  <strong><code>HelloWorldApp.java</code></strong></p>
-<p>Copia el siguiente código y guarda los cambios:</p>
+<h2 is-upgraded>Escriu el codi font del programa &#34;Hola Mon&#34;</h2>
+<p>Obre un editor de text sense format, com <code>gedit</code>, i crea un arxiu en la teva carpeta personal, amb el nom <strong><code>HelloWorldApp.java</code></strong></p>
+<p>Copia el següent codi i desa els canvis:</p>
 <pre><code>class HelloWorldApp {
     public static void main(String[] args) {
         System.out.println(&#34;Hello World!&#34;); // Display the string.
     }
 }</code></pre>
-<aside class="special"><p>  Nota:Teclea todo el código, comandos y nombres de fichero exactamente como se muestran. Tanto el compilador (javac) como el lanzador (java) son case-sensitive, así que debes poner las mayúsculas correctamente.</p>
-<p><code>HelloWorldApp</code>  <strong><em>no</em></strong> es lo mismo que  <code>helloworldapp</code></p>
+<aside class="special"><p> Nota: Tecleja tot el codi, comandes i noms d&#39;arxius, exactament com es mostren. Tant el compilador (<code>javac</code>) com el llançador (<code>java</code>) son <em>case-sensitive</em>, així que has de posar les majúscules correctament.</p>
+<p><code>HelloWorldApp</code>  <strong><em>no</em></strong> és el mateix que <code>helloworldapp</code></p>
 </aside>
-<h2 is-upgraded>Compila el archivo con el código fuente</h2>
-<p>Usa el siguiente comando en el terminal para compilar el archivo de código fuente que acabas de crear:</p>
+<h2 is-upgraded>Compila l&#39;arxiu amb el codi font</h2>
+<p>Utilitza el següent comandament al terminal per a compilar l&#39;arxiu de codi font que tot just has creat:</p>
 <pre>jdk1.8.0_144/bin/javac HelloWorldApp.java</pre>
-<p>Este comando habrá generado un fichero llamado <strong><code>HelloWorldApp.class</code></strong> con el <em>bytecode </em>de tu programa. Compruébalo.</p>
-<h2 is-upgraded>Ejecuta el programa con la Máquina Virtual de Java</h2>
+<p>Aquest comandament haurà generat un fitxer anomenat <strong><code>HelloWorldApp.class</code></strong> amb el <em>bytecode </em>del teu programa. Comprova-ho.</p>
+<h2 is-upgraded>Executa el programa amb la Màquina Virtual de Java</h2>
 <pre>jdk1.8.0_144/bin/java HelloWorldApp</pre>
-<p>¡Felicidades! ¡Has ejecutado tu primer programa!</p>
+<p>¡Felicitats! ¡Has executat el teu primer programa!</p>
 
 
       </google-codelab-step>
