--- a/mp03/codelab3/index.html
+++ b/mp03/codelab3/index.html
@@ -38,15 +38,18 @@
       </google-codelab-step>
     
       <google-codelab-step label="Crea el projecte" duration="0">
-        <p>Inicia IntelliJ i crea un nou projecte anomenat &#34;Figuras&#34;. Recorda marcar la opció &#34;Create project from template&#34; i selecciona la plantilla &#34;Command Line App&#34;.</p>
-<p>Per a crear objectes, primer s&#39;ha de definir la classe. A partir de la classe es creen els objects.</p>
-<p>Començarem per l&#39;object <em>sun</em>, que és de la classe <em>Circle</em>.</p>
+        <p>Inicia IntelliJ i crea un nou projecte anomenat &#34;Figuras&#34;. </p>
+<p class="image-container"><img style="width: 577.00px" src="img\7bf1c856c39baf4c.png"></p>
+<p>Recorda marcar la opció &#34;Create project from template&#34; i selecciona la plantilla &#34;Command Line App&#34;.</p>
+<p class="image-container"><img style="width: 582.00px" src="img\dbdf5844d88c2f2c.png"></p>
 
 
       </google-codelab-step>
     
       <google-codelab-step label="Crea la classe Circle" duration="0">
-        <p>Fes click-dreta sobre el <em>package </em>&#34;com.company&#34;, i selecciona les opcions &#34;New&#34; -&gt; &#34;Java Class&#34;:</p>
+        <p>Per a crear objectes, primer s&#39;ha de definir la classe. A partir de la classe es creen els objects.</p>
+<p>Començarem per l&#39;object <em>sun</em>, que és de la classe <em>Circle</em>.</p>
+<p>Fes click-dreta sobre el <em>package </em>&#34;com.company&#34;, i selecciona les opcions &#34;New&#34; -&gt; &#34;Java Class&#34;:</p>
 <p class="image-container"><img style="width: 658.00px" src="img\fc86c3561f1cf3ad.gif"></p>
 <p>Com a nom de la Classe introdueix &#34;Circle&#34;  (és important que el nom de les classes comenci amb majúscula)</p>
 <p>Polsa &#34;OK&#34;.</p>
