--- a/mp03/codelab8/index.html
+++ b/mp03/codelab8/index.html
@@ -28,7 +28,8 @@
                   feedback-link="https://github.com/gerardfp">
     
       <google-codelab-step label="Introducció" duration="0">
-        <p>L&#39;objectiu d&#39;aquest CodeLab és utilitzar la API java.time per al tractament de dates i hores.</p>
+        <p class="image-container"><img style="width: 600.00px" src="img\e5677be4336d334b.png"></p>
+<p>L&#39;objectiu d&#39;aquest CodeLab és utilitzar la API java.time per al tractament de dates i hores.</p>
 <p>El temps sembla un tema senzill; fins i tot un rellotge barat pot proporcionar una data i una hora bastant exactes. No obstant això, amb un examen més detallat, ens adonem de les subtils complexitats i de molts factors que afecten la comprensió del temps. Per exemple, el resultat d&#39;afegir un mes al 31 de gener és diferent per a un any de traspàs que per a altres anys. Les zones horàries també afegeixen complexitat. Per exemple, un país pot entrar i sortir de l&#39;horari d&#39;estiu un o més copa a l&#39;any o pot saltar l&#39;horari d&#39;estiu completament durant un any.</p>
 
 
