--- a/mp03/codelab11/index.html
+++ b/mp03/codelab11/index.html
@@ -52,10 +52,12 @@
 <p><a href="http://bitbucket.org" target="_blank">Bitbucket</a></p>
 <p>Totes elles ofereixen unes funcionalitats similars.</p>
 <p>En aquest CodeLab utilitzarem Github. Si no tens un compte, crea-te&#39;n un.</p>
-<h2 is-upgraded>Descarrega git</h2>
+<h2 is-upgraded>Instal·la git</h2>
 <p>Git és el programa que s&#39;encarrega de comunicar el nostre ordinador amb Github, per a enviar els canvis que realitzem al codi, o descarregar el codi que tenim allà.</p>
 <p>Descarrega i instal·la Git:</p>
 <p><a href="https://git-scm.com/downloads" target="_blank"><paper-button class="colored" raised><iron-icon icon="file-download"></iron-icon>Download Git</paper-button></a></p>
+<p>Amb Ubuntu:</p>
+<p><code>apt install git</code></p>
 
 
       </google-codelab-step>
