--- a/mp03/codelab16/index.html
+++ b/mp03/codelab16/index.html
@@ -166,7 +166,7 @@
        System.out.println(&#34;MITJA:&#34; + (valor1+valor2)/2);
    }
 }</code></pre>
-<p>Estem calculant la suma dels valors dues vegades. Podem emmagatzemar el resultat en una variable i reutilitzar-lo:</p>
+<p>Estem calculant la suma dels valors dues vegades. Podem emmagatzemar el resultat en una variable i reutilitzar-lo. Només cal seleccionar l&#39;expressió i polsar <code>Ctrl</code>+<code>Alt</code>+<code>V</code></p>
 <p class="image-container"><img style="width: 517.00px" src="img\4a07534b84ca8dd4.gif"></p>
 
 
