--- a/mp03/codelab19/index.html
+++ b/mp03/codelab19/index.html
@@ -81,7 +81,7 @@
        }
    }
 }</code></pre>
-<p>Crea la classe Banner i copia el codi.</p>
+<p>Crea la classe <code>Banner</code> i copia el codi.</p>
 
 
       </google-codelab-step>
@@ -104,7 +104,7 @@
     
       <google-codelab-step label="Importa la llibreria" duration="0">
         <p>Ja tenim la llibreria exportada en un arxiu JAR, i ara podem importar-la en altres projectes.</p>
-<p>Per a afegir una llibreria JAR a un projecte cal anar a File &gt; Project Structure... &gt; Libraries &gt; <img style="width: 21.00px" src="img\94ce938882ccb214.png"> &gt; Java i seleccionar el directori on tenim l&#39;arxiu JAR:</p>
+<p>Per a afegir una llibreria JAR a un projecte cal anar a <code>File</code> &gt; <code>Project Structure...</code> &gt; <code>Libraries</code> &gt; <img style="width: 21.00px" src="img\94ce938882ccb214.png"> &gt; <code>Java</code> i seleccionar el directori on tenim l&#39;arxiu JAR:</p>
 <p class="image-container"><img style="width: 285.00px" src="img\ab336f50306759a8.png"></p>
 <p class="image-container"><img style="width: 642.00px" src="img\73179d9718b6ed14.png"></p>
 <p>Ja està tot, ja podríem usar la classe <code>Banner</code> en aquest projecte.</p>
