--- a/mp03/codelab6/index.html
+++ b/mp03/codelab6/index.html
@@ -37,7 +37,7 @@
       </google-codelab-step>
     
       <google-codelab-step label="Crea el projecte" duration="0">
-        <p>Inicia IntelliJ i crea un nou projecte anomenat &#34;Formatting&#34;.</p>
+        <p>Inicia IntelliJ i crea un nou projecte anomenat <code>Formatting</code>.</p>
 <p class="image-container"><img style="width: 616.00px" src="img\792ed00254716d13.png"></p>
 <p class="image-container"><img style="width: 616.00px" src="img\7b9b5bf8a5d2dd19.png"></p>
 <p class="image-container"><img style="width: 736.40px" src="img\eb9372ba941daaeb.png"></p>
