--- a/mp03/codelab15/index.html
+++ b/mp03/codelab15/index.html
@@ -45,7 +45,7 @@
       </google-codelab-step>
     
       <google-codelab-step label="Crea el GUIForm" duration="0">
-        <p>Fes click-dreta sobre el package &#34;com.company&#34; i selecciona -&gt; <strong>NEW </strong>-&gt; <strong>GUI Form</strong></p>
+        <p>Fes clic-dreta sobre el package &#34;<code>com.company</code>&#34; i selecciona  <strong><code>NEW</code></strong><strong> </strong>-&gt; <strong><code>GUI Form</code></strong></p>
 <p class="image-container"><img style="width: 732.00px" src="img\3e5ef17c8cd93107.png"></p>
 <p>En el diàleg &#34;New GUI Form&#34; introdueix les següents dades:</p>
 <p class="image-container"><img style="width: 363.00px" src="img\25bd1aceeff1d5d7.png"></p>
@@ -53,9 +53,9 @@
 <p class="image-container"><img style="width: 736.40px" src="img\816f052029ecf12c.png"></p>
 <p>Aquest entorn permet arrossegar i soltar components al formulari. Hi podem veure tres seccions:</p>
 <ol type="1" start="1">
-<li>Component Tree - mostra la vista jeràrquica dels components que s&#39;han afegit al formulari. Per a cada component permet definir les seves propietats (Property | Value)</li>
-<li>Design area - la vista gràfica del formulari. Els components s&#39;afegeixen arrossegant-los en aquesta àrea</li>
-<li>Palette -  conté tots els components disponibles que es poden afegir al formulari</li>
+<li><code>Component Tree</code> - mostra la vista jeràrquica dels components que s&#39;han afegit al formulari. Per a cada component permet definir les seves propietats (Property | Value)</li>
+<li><code>Design area</code> - la vista gràfica del formulari. Els components s&#39;afegeixen arrossegant-los en aquesta àrea</li>
+<li><code>Palette</code> -  conté tots els components disponibles que es poden afegir al formulari</li>
 </ol>
 
 
@@ -63,14 +63,14 @@
     
       <google-codelab-step label="Disseny del GUI Form" duration="0">
         <h2 is-upgraded>Visualitzador de resultats</h2>
-<p>Arrossega un <code>JTextField</code> desde la paleta i solta&#39;l en l&#39;àrea de disseny. Estableix a la propietat &#34;Field name&#34; el valor &#34;<strong>resultat</strong>&#34; :</p>
+<p>Arrossega un <code>JTextField</code> desde la paleta i solta&#39;l en l&#39;àrea de disseny. Estableix a la propietat <code>Field name</code> el valor <strong><code>resultat</code></strong>:</p>
 <p class="image-container"><img style="width: 736.40px" src="img\18ec616da5a79bf8.png"></p>
 <h2 is-upgraded>Botons</h2>
 <p>Afegeix els components <code>JButton</code> de la paleta a l&#39;àrea de disseny. Distribuieix-los en la graella de la següent forma:</p>
 <p class="image-container"><img style="width: 736.40px" src="img\3a3d3af6cc28d772.gif"></p>
 <p>Estableix les següents propietats als botons:</p>
-<p>Button1: &#34;text&#34;=<strong>AC</strong>, &#34;field name&#34;=<strong>ACButton</strong></p>
-<p>Button2: &#34;text&#34;=<strong>NOT</strong>, &#34;field name&#34;=<strong>NOTButton</strong></p>
+<p>Button1: <code>text</code>=<strong><code>AC</code></strong>, <code>field name</code>=<strong><code>ACButton</code></strong></p>
+<p>Button2: <code>text</code>=<strong>NOT</strong>, &#34;field name&#34;=<strong>NOTButton</strong></p>
 <p>Button3: &#34;text&#34;=<strong>OR</strong>, &#34;field name&#34;=<strong>ORButton</strong></p>
 <p>Button4: &#34;text&#34;=<strong>AND</strong>, &#34;field name&#34;=<strong>ANDButton</strong></p>
 <p>Button5: &#34;text&#34;=<strong>0</strong>, &#34;field name&#34;=<strong>a0Button</strong></p>
@@ -78,9 +78,9 @@
 <p>Pots veure una previsualització de l&#39;aspecte del Formulari fent click-dreta sobre el disseny i selecionant &#34;Preview&#34;:</p>
 <p class="image-container"><img style="width: 736.40px" src="img\fa2c3fccc7603dd3.gif"></p>
 <h2 is-upgraded>Establir el nom del JPanel</h2>
-<p>Com a pas previ, per a fer funcionar el formulari es requereix establir el camp &#34;nom&#34; del component JPanel: </p>
-<p>Selecciona el <code>JPanel</code> a la finestra Component Tree i canvia la propietat &#34;<strong>nom</strong>&#34; a <strong><code>calcView.</code></strong></p>
-<p>Fent click sobre l&#39;arxiu Calculadora.java s&#39;haurien de mostrar els següents components inserits:</p>
+<p>Com a pas previ, per a fer funcionar el formulari es requereix establir el camp <code>nom</code> del component <code>JPanel</code>: </p>
+<p>Selecciona el <code>JPanel</code> a la finestra <code>Component Tree</code> i canvia la propietat <strong><code>nom</code></strong> a <strong><code>calcView.</code></strong></p>
+<p>Fent clic sobre l&#39;arxiu <code>Calculadora.java</code> s&#39;haurien de mostrar els següents components inserits:</p>
 <h3 is-upgraded>Calculadora.java</h3>
 <pre><code>package com.company;
 
