--- a/mp03/codelab5/index.html
+++ b/mp03/codelab5/index.html
@@ -31,13 +31,13 @@
         <p class="image-container"><img style="width: 267.50px" src="img\33f6cf6e98a8e9a4.png"></p>
 <p>L&#39;objectiu d&#39;aquest CodeLab és aprendre l&#39;ús de la classe Random per a la generació de nombres aleatoris.</p>
 <p>Quan es desenvolupen aplicacions, molt sovint es necesiten nombres aleatoris. Per exemple en la programació de molts jocs, aplicacions de criptografia, per a usar com identificadors, etc.</p>
-<p>Java proporciona suport per a la generació de nombres aleatoris a través de la classe <code>java.util.Random</code>, i la classe SecureRandom per a aplicacions que necessiten aleatorietat criptogràfica. </p>
+<p>Java proporciona suport per a la generació de nombres aleatoris a través de la classe <code>java.util.Random</code>, i la classe <code>SecureRandom</code> per a aplicacions que necessiten aleatorietat criptogràfica. </p>
 
 
       </google-codelab-step>
     
       <google-codelab-step label="Crea el projecte" duration="0">
-        <p>Inicia IntelliJ i crea un nou projecte anomenat &#34;Random&#34;.</p>
+        <p>Inicia IntelliJ i crea un nou projecte anomenat <code>Random</code>.</p>
 <p class="image-container"><img style="width: 616.00px" src="img\792ed00254716d13.png"></p>
 <p class="image-container"><img style="width: 616.00px" src="img\7b9b5bf8a5d2dd19.png"></p>
 <p class="image-container"><img style="width: 616.00px" src="img\75e73f797c40060f.png"></p>
